# struct_core_ros

./: CMakeLists.txt  README.md  package.xml  plugins.xml
include/ST/: CSVFileWriter.h  CameraFrames.h  CaptureSession.h  CaptureSessionSettings.h  CaptureSessionTypes.h  GL.h  IMUEvents.h  Macros.h  MathTypes.h  MathTypes.hpp  OCCFileWriter.h  Utilities.h
include/struct_core_ros/: sc.h
launch/: sc.launch  sc.yaml
src/: sc.cpp
