<package format="2">
  <name>struct_core_ros</name>
  <version>1.0.0</version>
  <description>
  Structure Core support for ROS
  </description>
  <maintainer email="info@automodality.com">info</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>geometry_msgs</depend> 
  <depend>rosbag</depend> 
  <depend>nodelet</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>
  
</package>
